--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
     "dev": "esbuild frontend/scripts/app.js --bundle --outfile=static/scripts/app.js --watch",
-    "build": "esbuild frontend/scripts/app.js --bundle --outfile=static/scripts/app.js"
+    "build": "esbuild frontend/scripts/app.js --bundle --outfile=static/scripts/app.js",
+    "css": "tailwindcss -i ./frontend/styles/app.css -o ./static/styles/app.css --watch"
   },
   "devDependencies": {
-    "esbuild": "^0.24.0"
+    "esbuild": "^0.24.0",
+    "tailwindcss": "^3.4.15"
   },
   "dependencies": {
     "htmx.org": "^2.0.3"
