--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "css": "tailwindcss -i ./frontend/styles/app.css -o ./static/styles/app.css --watch"
   },
   "devDependencies": {
+    "daisyui": "^4.12.14",
     "esbuild": "^0.24.0",
     "tailwindcss": "^3.4.15"
   },
