--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ django = "^5.1.3"
 django-extensions = "^3.2.3"
 
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^4.0.1"
+django-debug-toolbar = "^4.4.6"
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
