--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-extensions = "^3.2.3"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.0.1"
 django-debug-toolbar = "^4.4.6"
+commitizen = "^4.1.0"
 
 
 [build-system]
